--- a/upcoming.html
+++ b/upcoming.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta charset="utf-8">
-		<meta name="description" content="">
-		<meta name="description" content="">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title></title>
 	</head>
 	<body>
 		<header>
@@ -41,10 +38,7 @@
 			</div>
 		</nav>
 		<main>
-			<div></div>
-			<div></div>
-			<div></div>
-			<div></div>
+			
 		</main>
 		<footer>
 			<div>
