--- a/index.html
+++ b/index.html
@@ -41,10 +41,98 @@
 			</div>
 		</nav>
 		<main>
-			<div></div>
-			<div></div>
-			<div></div>
-			<div></div>
+			<div>
+				<div>
+					<video autoplay>
+						<source src="movie1.mp4" type="movie/mp4">
+					</video>
+					<p>Title1</p>
+				</div>
+				<div>
+					<video autoplay>
+						<source src="movie2.mp4" type="movie/mp4">
+					</video>
+					<p>Title2</p>
+				</div>
+				<div>
+					<video autoplay>
+						<source src="movie3.mp4" type="movie/mp4">
+					</video>
+					<p>Title3</p>
+				</div>
+			</div>
+			<div>
+				<p>Information</p>
+				<div>
+					<a href="">
+						<div>
+							<p>Description</p>
+						</div>
+						<div>
+							<p>Type</p>
+						</div>
+						<div>
+							<p>Date</p>
+							<p>Month</p>
+							<p>Year</p>
+						</div>
+					</a>
+					<a href="">
+						<div>
+							<p>Description</p>
+						</div>
+						<div>
+							<p>Type</p>
+						</div>
+						<div>
+							<p>Date</p>
+							<p>Month</p>
+							<p>Year</p>
+						</div>
+					</a>
+					<a href="">
+						<div>
+							<p>Description</p>
+						</div>
+						<div>
+							<p>Type</p>
+						</div>
+						<div>
+							<p>Date</p>
+							<p>Month</p>
+							<p>Year</p>
+						</div>
+					</a>
+				</div>
+				<div>
+					<a href="/upcoming">View all</a>
+				</div>
+			</div>
+			<div>
+				<div>
+					<img src="">
+				</div>
+				<div>
+					<p>About Us</p>
+					<p>Description</p>
+					<a href="/about">Read More</a>
+				</div>
+			</div>
+			<div>
+				<p>Albums</p>
+				<div>
+					<a href=""><img src=""></a>
+					<a href=""><img src=""></a>
+					<a href=""><img src=""></a>
+					<a href=""><img src=""></a>
+					<a href=""><img src=""></a>
+				</div>
+				<div>
+					<a href="/music">View all</a>
+					<button>Prev</button>
+					<button>Next</button>
+				</div>
+			</div>
 		</main>
 		<footer>
 			<div>
