--- a/about.html
+++ b/about.html
@@ -38,7 +38,18 @@
 			</div>
 		</nav>
 		<main>
-			
+			<div>
+				<img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.wallpaperup.com%2F126540%2Fspray_circle_fire_sun_drops_bokeh.html&psig=AOvVaw0fyXV57RNgM17xar5h198-&ust=1635159543480000&source=images&cd=vfe&ved=0CAgQjRxqFwoTCMCVyZHy4vMCFQAAAAAdAAAAABAu">
+			</div>
+			<div>
+				<div>
+					<img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fpixabay.com%2Fvectors%2Fblank-profile-picture-mystery-man-973460%2F&psig=AOvVaw1xghGpb2ToVnioZbZ63for&ust=1635159405946000&source=images&cd=vfe&ved=0CAgQjRxqFwoTCNjGiM3x4vMCFQAAAAAdAAAAABAD">
+				</div>
+				<div>
+					<p>Name</p>
+					<p>Description</p>
+				</div>
+			</div>
 		</main>
 		<footer>
 			<div>
