--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 			</div>
 			<div>
 				<div>
-					<img src="">
+					<img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fpixabay.com%2Fvectors%2Fblank-profile-picture-mystery-man-973460%2F&psig=AOvVaw1SMUdA3Vw59n4qkB-9n9gQ&ust=1635159190688000&source=images&cd=vfe&ved=0CAgQjRxqFwoTCPCvyObw4vMCFQAAAAAdAAAAABAD">
 				</div>
 				<div>
 					<p>About Us</p>
@@ -121,11 +121,11 @@
 			<div>
 				<p>Albums</p>
 				<div>
-					<a href=""><img src=""></a>
-					<a href=""><img src=""></a>
-					<a href=""><img src=""></a>
-					<a href=""><img src=""></a>
-					<a href=""><img src=""></a>
+					<a href=""><img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fpixabay.com%2Fvectors%2Fblank-profile-picture-mystery-man-973460%2F&psig=AOvVaw1SMUdA3Vw59n4qkB-9n9gQ&ust=1635159190688000&source=images&cd=vfe&ved=0CAgQjRxqFwoTCPCvyObw4vMCFQAAAAAdAAAAABAD"></a>
+					<a href=""><img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fpixabay.com%2Fvectors%2Fblank-profile-picture-mystery-man-973460%2F&psig=AOvVaw1SMUdA3Vw59n4qkB-9n9gQ&ust=1635159190688000&source=images&cd=vfe&ved=0CAgQjRxqFwoTCPCvyObw4vMCFQAAAAAdAAAAABAD"></a>
+					<a href=""><img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fpixabay.com%2Fvectors%2Fblank-profile-picture-mystery-man-973460%2F&psig=AOvVaw1SMUdA3Vw59n4qkB-9n9gQ&ust=1635159190688000&source=images&cd=vfe&ved=0CAgQjRxqFwoTCPCvyObw4vMCFQAAAAAdAAAAABAD"></a>
+					<a href=""><img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fpixabay.com%2Fvectors%2Fblank-profile-picture-mystery-man-973460%2F&psig=AOvVaw1SMUdA3Vw59n4qkB-9n9gQ&ust=1635159190688000&source=images&cd=vfe&ved=0CAgQjRxqFwoTCPCvyObw4vMCFQAAAAAdAAAAABAD"></a>
+					<a href=""><img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fpixabay.com%2Fvectors%2Fblank-profile-picture-mystery-man-973460%2F&psig=AOvVaw1SMUdA3Vw59n4qkB-9n9gQ&ust=1635159190688000&source=images&cd=vfe&ved=0CAgQjRxqFwoTCPCvyObw4vMCFQAAAAAdAAAAABAD"></a>
 				</div>
 				<div>
 					<a href="/music">View all</a>
