--- a/music.html
+++ b/music.html
@@ -38,7 +38,35 @@
 			</div>
 		</nav>
 		<main>
-			
+			<p>Music</p>
+			<div>
+				<button>All</button>
+				<button>Single</button>
+				<button>Album</button>
+			</div>
+			<div>
+				<a href="">
+					<img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fpixabay.com%2Fvectors%2Fblank-profile-picture-mystery-man-973460%2F&psig=AOvVaw1xghGpb2ToVnioZbZ63for&ust=1635159405946000&source=images&cd=vfe&ved=0CAgQjRxqFwoTCNjGiM3x4vMCFQAAAAAdAAAAABAD">
+					<p>Description</p>
+					<p>Title</p>
+				</a>
+				<a href="">
+					<img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fpixabay.com%2Fvectors%2Fblank-profile-picture-mystery-man-973460%2F&psig=AOvVaw1xghGpb2ToVnioZbZ63for&ust=1635159405946000&source=images&cd=vfe&ved=0CAgQjRxqFwoTCNjGiM3x4vMCFQAAAAAdAAAAABAD">
+					<p>Description</p>
+					<p>Title</p>
+				</a>
+				<a href="">
+					<img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fpixabay.com%2Fvectors%2Fblank-profile-picture-mystery-man-973460%2F&psig=AOvVaw1xghGpb2ToVnioZbZ63for&ust=1635159405946000&source=images&cd=vfe&ved=0CAgQjRxqFwoTCNjGiM3x4vMCFQAAAAAdAAAAABAD">
+					<p>Description</p>
+					<p>Title</p>
+				</a>
+				<a href="">
+					<img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fpixabay.com%2Fvectors%2Fblank-profile-picture-mystery-man-973460%2F&psig=AOvVaw1xghGpb2ToVnioZbZ63for&ust=1635159405946000&source=images&cd=vfe&ved=0CAgQjRxqFwoTCNjGiM3x4vMCFQAAAAAdAAAAABAD">
+					<p>Description</p>
+					<p>Title</p>
+				</a>
+			</div>
+			<button>More</button>
 		</main>
 		<footer>
 			<div>
