--- a/upcoming.html
+++ b/upcoming.html
@@ -38,7 +38,55 @@
 			</div>
 		</nav>
 		<main>
-			
+			<p>Upcoming</p>
+			<div>
+				<button>All</button>
+				<button>Live</button>
+				<button>Release</button>
+				<button>Event</button>
+			</div>
+			<div>
+				<a href="">
+					<div>
+						<p>Description</p>
+					</div>
+					<div>
+						<p>Type</p>
+					</div>
+					<div>
+						<p>Date</p>
+						<p>Month</p>
+						<p>Year</p>
+					</div>
+				</a>
+				<a href="">
+					<div>
+						<p>Description</p>
+					</div>
+					<div>
+						<p>Type</p>
+					</div>
+					<div>
+						<p>Date</p>
+						<p>Month</p>
+						<p>Year</p>
+					</div>
+				</a>
+				<a href="">
+					<div>
+						<p>Description</p>
+					</div>
+					<div>
+						<p>Type</p>
+					</div>
+					<div>
+						<p>Date</p>
+						<p>Month</p>
+						<p>Year</p>
+					</div>
+				</a>
+			</div>
+			<button>More</button>
 		</main>
 		<footer>
 			<div>
