--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<title>Logo</title>
 		<meta charset="utf-8">
-		<meta name="description" content="">
-		<meta name="description" content="">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 	<body>
 		<header>
 			<div>
 				<div>
-					<a href="/index"><img src=""></a>
+					<a href="/index"><img src="logo" alt="logo"></a>
 				</div>
 				<div>
 					<button></button>
@@ -19,7 +18,7 @@
 		</header>
 		<nav>
 			<div>
-				<a href="/index"><img src=""></a>
+				<a href="/index"><img src="logo" alt="logo"></a>
 			</div>
 			<ul>
 				<li><a href="/index">Home</a></li>
@@ -31,9 +30,9 @@
 			</ul>
 			<div>
 				<ul>
-					<li><a href="/index"><img src=""></a></li>
-					<li><a href="/index"><img src=""></a></li>
-					<li><a href="/index"><img src=""></a></li>
+					<li><a href="/index"><img src="s1" alt="s1"></a></li>
+					<li><a href="/index"><img src="s2" alt="s2"></a></li>
+					<li><a href="/index"><img src="s3" alt="s3"></a></li>
 				</ul>
 				<p>
 					Copyrights.
@@ -110,7 +109,7 @@
 			</div>
 			<div>
 				<div>
-					<img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fpixabay.com%2Fvectors%2Fblank-profile-picture-mystery-man-973460%2F&psig=AOvVaw1SMUdA3Vw59n4qkB-9n9gQ&ust=1635159190688000&source=images&cd=vfe&ved=0CAgQjRxqFwoTCPCvyObw4vMCFQAAAAAdAAAAABAD">
+					<img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fpixabay.com%2Fvectors%2Fblank-profile-picture-mystery-man-973460%2F&psig=AOvVaw1SMUdA3Vw59n4qkB-9n9gQ&ust=1635159190688000&source=images&cd=vfe&ved=0CAgQjRxqFwoTCPCvyObw4vMCFQAAAAAdAAAAABAD" alt="cover">
 				</div>
 				<div>
 					<p>About Us</p>
@@ -121,11 +120,11 @@
 			<div>
 				<p>Albums</p>
 				<div>
-					<a href=""><img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fpixabay.com%2Fvectors%2Fblank-profile-picture-mystery-man-973460%2F&psig=AOvVaw1SMUdA3Vw59n4qkB-9n9gQ&ust=1635159190688000&source=images&cd=vfe&ved=0CAgQjRxqFwoTCPCvyObw4vMCFQAAAAAdAAAAABAD"></a>
-					<a href=""><img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fpixabay.com%2Fvectors%2Fblank-profile-picture-mystery-man-973460%2F&psig=AOvVaw1SMUdA3Vw59n4qkB-9n9gQ&ust=1635159190688000&source=images&cd=vfe&ved=0CAgQjRxqFwoTCPCvyObw4vMCFQAAAAAdAAAAABAD"></a>
-					<a href=""><img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fpixabay.com%2Fvectors%2Fblank-profile-picture-mystery-man-973460%2F&psig=AOvVaw1SMUdA3Vw59n4qkB-9n9gQ&ust=1635159190688000&source=images&cd=vfe&ved=0CAgQjRxqFwoTCPCvyObw4vMCFQAAAAAdAAAAABAD"></a>
-					<a href=""><img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fpixabay.com%2Fvectors%2Fblank-profile-picture-mystery-man-973460%2F&psig=AOvVaw1SMUdA3Vw59n4qkB-9n9gQ&ust=1635159190688000&source=images&cd=vfe&ved=0CAgQjRxqFwoTCPCvyObw4vMCFQAAAAAdAAAAABAD"></a>
-					<a href=""><img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fpixabay.com%2Fvectors%2Fblank-profile-picture-mystery-man-973460%2F&psig=AOvVaw1SMUdA3Vw59n4qkB-9n9gQ&ust=1635159190688000&source=images&cd=vfe&ved=0CAgQjRxqFwoTCPCvyObw4vMCFQAAAAAdAAAAABAD"></a>
+					<a href=""><img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fpixabay.com%2Fvectors%2Fblank-profile-picture-mystery-man-973460%2F&psig=AOvVaw1SMUdA3Vw59n4qkB-9n9gQ&ust=1635159190688000&source=images&cd=vfe&ved=0CAgQjRxqFwoTCPCvyObw4vMCFQAAAAAdAAAAABAD" alt="albumCover"></a>
+					<a href=""><img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fpixabay.com%2Fvectors%2Fblank-profile-picture-mystery-man-973460%2F&psig=AOvVaw1SMUdA3Vw59n4qkB-9n9gQ&ust=1635159190688000&source=images&cd=vfe&ved=0CAgQjRxqFwoTCPCvyObw4vMCFQAAAAAdAAAAABAD" alt="albumCover"></a>
+					<a href=""><img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fpixabay.com%2Fvectors%2Fblank-profile-picture-mystery-man-973460%2F&psig=AOvVaw1SMUdA3Vw59n4qkB-9n9gQ&ust=1635159190688000&source=images&cd=vfe&ved=0CAgQjRxqFwoTCPCvyObw4vMCFQAAAAAdAAAAABAD" alt="albumCover"></a>
+					<a href=""><img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fpixabay.com%2Fvectors%2Fblank-profile-picture-mystery-man-973460%2F&psig=AOvVaw1SMUdA3Vw59n4qkB-9n9gQ&ust=1635159190688000&source=images&cd=vfe&ved=0CAgQjRxqFwoTCPCvyObw4vMCFQAAAAAdAAAAABAD" alt="albumCover"></a>
+					<a href=""><img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fpixabay.com%2Fvectors%2Fblank-profile-picture-mystery-man-973460%2F&psig=AOvVaw1SMUdA3Vw59n4qkB-9n9gQ&ust=1635159190688000&source=images&cd=vfe&ved=0CAgQjRxqFwoTCPCvyObw4vMCFQAAAAAdAAAAABAD" alt="albumCover"></a>
 				</div>
 				<div>
 					<a href="/music">View all</a>
@@ -136,7 +135,7 @@
 		</main>
 		<footer>
 			<div>
-				<a href="/index"><img src=""></a>
+				<a href="/index"><img src="logo" alt="logo"></a>
 			</div>
 			<ul>
 				<li><a href="/index">Home</a></li>
@@ -153,7 +152,7 @@
 					<li><a href="/index"><img src=""></a></li>
 				</ul>
 				<div>
-					<a href="/index"><img src=""></a>
+					<a href="/index"><img src="chevron" alt="chevron"></a>
 					<p>Back to Top</p>
 				</div>
 				<p>
