--- a/music.html
+++ b/music.html
@@ -87,7 +87,7 @@
 					<li><a href="/index"><img src=""></a></li>
 				</ul>
 				<div>
-					<a href="/index"><img src=""></a>
+					<a href="/music"><img src=""></a>
 					<p>Back to Top</p>
 				</div>
 				<p>
