--- a/upcoming.html
+++ b/upcoming.html
@@ -107,8 +107,8 @@
 					<li><a href="/index"><img src=""></a></li>
 				</ul>
 				<div>
-					<a href="/index"><img src=""></a>
-					<p>Back to Top</p>
+					<a href="/upcoming"><img src=""></a>
+					<a>Back to Top</a>
 				</div>
 				<p>
 					Copyrights.
