--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
 					<li><a href="/index"><img src=""></a></li>
 				</ul>
 				<div>
-					<a href="/index"><img src=""></a>
+					<a href="/about"><img src=""></a>
 					<p>Back to Top</p>
 				</div>
 				<p>
