--- a/contact.html
+++ b/contact.html
@@ -81,7 +81,7 @@
 					<li><a href="/index"><img src=""></a></li>
 				</ul>
 				<div>
-					<a href="/index"><img src=""></a>
+					<a href="/contact"><img src=""></a>
 					<p>Back to Top</p>
 				</div>
 				<p>
