--- a/about.html
+++ b/about.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title></title>
+		<title>Logo</title>
 	</head>
 	<body>
 		<header>
 			<div>
 				<div>
-					<a href="/index"><img src=""></a>
+					<a href="/index"><img src="logo" alt="logo"></a>
 				</div>
 				<div>
 					<button></button>
@@ -16,7 +16,7 @@
 		</header>
 		<nav>
 			<div>
-				<a href="/index"><img src=""></a>
+				<a href="/index"><img src="logo" alt="logo"></a>
 			</div>
 			<ul>
 				<li><a href="/index">Home</a></li>
@@ -28,9 +28,9 @@
 			</ul>
 			<div>
 				<ul>
-					<li><a href="/index"><img src=""></a></li>
-					<li><a href="/index"><img src=""></a></li>
-					<li><a href="/index"><img src=""></a></li>
+					<li><a href="/index"><img src="s1" alt="s1"></a></li>
+					<li><a href="/index"><img src="s2" alt="s2"></a></li>
+					<li><a href="/index"><img src="s3" alt="s3"></a></li>
 				</ul>
 				<p>
 					Copyrights.
@@ -39,11 +39,11 @@
 		</nav>
 		<main>
 			<div>
-				<img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.wallpaperup.com%2F126540%2Fspray_circle_fire_sun_drops_bokeh.html&psig=AOvVaw0fyXV57RNgM17xar5h198-&ust=1635159543480000&source=images&cd=vfe&ved=0CAgQjRxqFwoTCMCVyZHy4vMCFQAAAAAdAAAAABAu">
+				<img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.wallpaperup.com%2F126540%2Fspray_circle_fire_sun_drops_bokeh.html&psig=AOvVaw0fyXV57RNgM17xar5h198-&ust=1635159543480000&source=images&cd=vfe&ved=0CAgQjRxqFwoTCMCVyZHy4vMCFQAAAAAdAAAAABAu" alt="background">
 			</div>
 			<div>
 				<div>
-					<img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fpixabay.com%2Fvectors%2Fblank-profile-picture-mystery-man-973460%2F&psig=AOvVaw1xghGpb2ToVnioZbZ63for&ust=1635159405946000&source=images&cd=vfe&ved=0CAgQjRxqFwoTCNjGiM3x4vMCFQAAAAAdAAAAABAD">
+					<img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fpixabay.com%2Fvectors%2Fblank-profile-picture-mystery-man-973460%2F&psig=AOvVaw1xghGpb2ToVnioZbZ63for&ust=1635159405946000&source=images&cd=vfe&ved=0CAgQjRxqFwoTCNjGiM3x4vMCFQAAAAAdAAAAABAD" alt="cover">
 				</div>
 				<div>
 					<p>Name</p>
@@ -53,7 +53,7 @@
 		</main>
 		<footer>
 			<div>
-				<a href="/index"><img src=""></a>
+				<a href="/index"><img src="logo" alt="logo"></a>
 			</div>
 			<ul>
 				<li><a href="/index">Home</a></li>
@@ -65,13 +65,13 @@
 			</ul>
 			<div>
 				<ul>
-					<li><a href="/index"><img src=""></a></li>
-					<li><a href="/index"><img src=""></a></li>
-					<li><a href="/index"><img src=""></a></li>
+					<li><a href="/index"><img src="s1" alt="s1"></a></li>
+					<li><a href="/index"><img src="s2" alt="s2"></a></li>
+					<li><a href="/index"><img src="s3" alt="s3"></a></li>
 				</ul>
 				<div>
-					<a href="/about"><img src=""></a>
-					<p>Back to Top</p>
+					<a href="/about"><img src="chevron" alt="chevron"></a>
+					<a>Back to Top</a>
 				</div>
 				<p>
 					Copyrights.
