--- a/contact.html
+++ b/contact.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title></title>
+		<title>Logo</title>
 	</head>
 	<body>
 		<header>
 			<div>
 				<div>
-					<a href="/index"><img src=""></a>
+					<a href="/index"><img src="logo" alt="logo"></a>
 				</div>
 				<div>
 					<button></button>
@@ -16,7 +16,7 @@
 		</header>
 		<nav>
 			<div>
-				<a href="/index"><img src=""></a>
+				<a href="/index"><img src="logo" alt="logo"></a>
 			</div>
 			<ul>
 				<li><a href="/index">Home</a></li>
@@ -28,9 +28,9 @@
 			</ul>
 			<div>
 				<ul>
-					<li><a href="/index"><img src=""></a></li>
-					<li><a href="/index"><img src=""></a></li>
-					<li><a href="/index"><img src=""></a></li>
+					<li><a href="/index"><img src="s1" alt="s1"></a></li>
+					<li><a href="/index"><img src="s2" alt="s2"></a></li>
+					<li><a href="/index"><img src="s3" alt="s3"></a></li>
 				</ul>
 				<p>
 					Copyrights.
@@ -64,7 +64,7 @@
 		</main>
 		<footer>
 			<div>
-				<a href="/index"><img src=""></a>
+				<a href="/index"><img src="logo" alt="logo"></a>
 			</div>
 			<ul>
 				<li><a href="/index">Home</a></li>
@@ -76,13 +76,13 @@
 			</ul>
 			<div>
 				<ul>
-					<li><a href="/index"><img src=""></a></li>
-					<li><a href="/index"><img src=""></a></li>
-					<li><a href="/index"><img src=""></a></li>
+					<li><a href="/index"><img src="s1" alt="s1"></a></li>
+					<li><a href="/index"><img src="s2" alt="s2"></a></li>
+					<li><a href="/index"><img src="s3" alt="s3"></a></li>
 				</ul>
 				<div>
-					<a href="/contact"><img src=""></a>
-					<p>Back to Top</p>
+					<a href="/contact"><img src="chevron" alt="chevron"></a>
+					<a>Back to Top</a>
 				</div>
 				<p>
 					Copyrights.
