--- a/index.html
+++ b/index.html
@@ -147,9 +147,9 @@
 			</ul>
 			<div>
 				<ul>
-					<li><a href="/index"><img src=""></a></li>
-					<li><a href="/index"><img src=""></a></li>
-					<li><a href="/index"><img src=""></a></li>
+					<li><a href="/index"><img src="s1" alt="s1"></a></li>
+					<li><a href="/index"><img src="s2" alt="s2"></a></li>
+					<li><a href="/index"><img src="s3" alt="s3"></a></li>
 				</ul>
 				<div>
 					<a href="/index"><img src="chevron" alt="chevron"></a>
