--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
 		<title>Logo</title>
 		<meta charset="utf-8">
@@ -12,7 +12,7 @@
 					<a href="/index"><img src="logo" alt="logo"></a>
 				</div>
 				<div>
-					<button></button>
+					<button>menu</button>
 				</div>
 			</div>
 		</header>
