--- a/music.html
+++ b/music.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
 		<title>Logo</title>
 	</head>
@@ -10,7 +10,7 @@
 					<a href="/index"><img src="logo" alt="logo"></a>
 				</div>
 				<div>
-					<button></button>
+					<button>menu</button>
 				</div>
 			</div>
 		</header>
