--- a/merch.html
+++ b/merch.html
@@ -38,29 +38,7 @@
 			</div>
 		</nav>
 		<main>
-			<div>
-				<p>Contact Us</p>
-				<div>
-					<form>
-						<label for="name">Name</label>
-						<input type="text" id="name" name="name">
-						<label for="email">Email</label>
-						<input type="text" id="email" name="email">
-						<label for="chooseSubject">Choose the Subject</label>
-						<select id="chooseSubject">
-							<option value="option1">Option1</option>
-							<option value="option2">Option2</option>
-							<option value="option3">Option3</option>
-						</select>
-						<label for="other">Other</label>
-						<input type="text" id="other" name="other">
-						<label for="number">Phone number</label>
-						<input type="number" id="number" name="phoneNumber">
-						<label for="subject">Subject</label>
-						<input type="text" id="subject" name="subject">
-					</form>
-				</div>
-			</div>
+			
 		</main>
 		<footer>
 			<div>
@@ -81,7 +59,7 @@
 					<li><a href="/index"><img src="s3.png" alt="s3"></a></li>
 				</ul>
 				<div>
-					<a href="/contact"><img src="chevron.png" alt="chevron"></a>
+					<a href="/merch"><img src="chevron.png" alt="chevron"></a>
 					<p>Back to Top</p>
 				</div>
 				<p>
