--- a/upcoming.html
+++ b/upcoming.html
@@ -7,7 +7,7 @@
 		<header>
 			<div>
 				<div>
-					<a href="/index"><img src="logo" alt="logo"></a>
+					<a href="/index"><img src="logo.png" alt="logo"></a>
 				</div>
 				<div>
 					<button>menu</button>
@@ -16,21 +16,21 @@
 		</header>
 		<nav>
 			<div>
-				<a href="/index"><img src="logo" alt="logo"></a>
+				<a href="/index"><img src="logo.png" alt="logo"></a>
 			</div>
 			<ul>
 				<li><a href="/index">Home</a></li>
 				<li><a href="/upcoming">Upcoming</a></li>
 				<li><a href="/music">Music</a></li>
 				<li><a href="/about">About Us</a></li>
-				<li><a href="">Merch</a></li>
+				<li><a href="/merch">Merch</a></li>
 				<li><a href="/contact">Contacts</a></li>
 			</ul>
 			<div>
 				<ul>
-					<li><a href="/index"><img src="s1" alt="s1"></a></li>
-					<li><a href="/index"><img src="s2" alt="s2"></a></li>
-					<li><a href="/index"><img src="s3" alt="s3"></a></li>
+					<li><a href="/index"><img src="s1.png" alt="s1"></a></li>
+					<li><a href="/index"><img src="s2.png" alt="s2"></a></li>
+					<li><a href="/index"><img src="s3.png" alt="s3"></a></li>
 				</ul>
 				<p>
 					Copyrights.
@@ -90,25 +90,25 @@
 		</main>
 		<footer>
 			<div>
-				<a href="/index"><img src="logo" alt="logo"></a>
+				<a href="/index"><img src="logo.png" alt="logo"></a>
 			</div>
 			<ul>
 				<li><a href="/index">Home</a></li>
 				<li><a href="/upcoming">Upcoming</a></li>
 				<li><a href="/music">Music</a></li>
 				<li><a href="/about">About Us</a></li>
-				<li><a href="">Merch</a></li>
+				<li><a href="/merch">Merch</a></li>
 				<li><a href="/contact">Contacts</a></li>
 			</ul>
 			<div>
 				<ul>
-					<li><a href="/index"><img src="s1" alt="s1"></a></li>
-					<li><a href="/index"><img src="s2" alt="s2"></a></li>
-					<li><a href="/index"><img src="s3" alt="s3"></a></li>
+					<li><a href="/index"><img src="s1.png" alt="s1"></a></li>
+					<li><a href="/index"><img src="s2.png" alt="s2"></a></li>
+					<li><a href="/index"><img src="s3.png" alt="s3"></a></li>
 				</ul>
 				<div>
-					<a href="/upcoming"><img src="chevron" alt="chevron"></a>
-					<a>Back to Top</a>
+					<a href="/upcoming"><img src="chevron.png" alt="chevron"></a>
+					<p>Back to Top</p>
 				</div>
 				<p>
 					Copyrights.
