--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 		<title>Logo</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link href="http://fonts.cdnfonts.com/css/gotham" rel="stylesheet">
+		<link rel="stylesheet" type="text/css" href="main.css">
 	</head>
 	<body>
 		<header>
