--- a/music.html
+++ b/music.html
@@ -2,6 +2,10 @@
 <html lang="en">
 	<head>
 		<title>Logo</title>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link href="http://fonts.cdnfonts.com/css/gotham" rel="stylesheet">
+		<link rel="stylesheet" type="text/css" href="main.css">
 	</head>
 	<body>
 		<header>
