--- a/upcoming.html
+++ b/upcoming.html
@@ -5,19 +5,28 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href="http://fonts.cdnfonts.com/css/gotham" rel="stylesheet">
-		<link rel="stylesheet" type="text/css" href="main.css">
+		<link rel="stylesheet" type="text/css" href="general.css">
 	</head>
 	<body>
 		<header>
-			<div>
-				<div>
-					<a href="/index"><img src="logo.png" alt="logo"></a>
-				</div>
-				<div>
-					<button>menu</button>
-				</div>
+			<div class="ui ui-top">
+				<a href="/index" class="medium">Logo</a>
+			</div>
+			<div class="ui ui-top">
+				<button>Navigation
+					<svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="bars" class="svg-inline--fa fa-bars fa-w-14" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+						<path fill="currentColor" d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"></path>
+					</svg>
+				</button>
 			</div>
 		</header>
+		<div class="ui ui-bottom">
+			<button>
+				<svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="lightbulb" class="svg-inline--fa fa-lightbulb fa-w-11" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 352 512">
+					<path fill="currentColor" d="M96.06 454.35c.01 6.29 1.87 12.45 5.36 17.69l17.09 25.69a31.99 31.99 0 0 0 26.64 14.28h61.71a31.99 31.99 0 0 0 26.64-14.28l17.09-25.69a31.989 31.989 0 0 0 5.36-17.69l.04-38.35H96.01l.05 38.35zM0 176c0 44.37 16.45 84.85 43.56 115.78 16.52 18.85 42.36 58.23 52.21 91.45.04.26.07.52.11.78h160.24c.04-.26.07-.51.11-.78 9.85-33.22 35.69-72.6 52.21-91.45C335.55 260.85 352 220.37 352 176 352 78.61 272.91-.3 175.45 0 73.44.31 0 82.97 0 176zm176-80c-44.11 0-80 35.89-80 80 0 8.84-7.16 16-16 16s-16-7.16-16-16c0-61.76 50.24-112 112-112 8.84 0 16 7.16 16 16s-7.16 16-16 16z"></path>
+				</svg>Dark
+			</button>
+		</div>
 		<nav>
 			<div>
 				<a href="/index"><img src="logo.png" alt="logo"></a>
@@ -92,32 +101,5 @@
 			</div>
 			<button>More</button>
 		</main>
-		<footer>
-			<div>
-				<a href="/index"><img src="logo.png" alt="logo"></a>
-			</div>
-			<ul>
-				<li><a href="/index">Home</a></li>
-				<li><a href="/upcoming">Upcoming</a></li>
-				<li><a href="/music">Music</a></li>
-				<li><a href="/about">About Us</a></li>
-				<li><a href="/merch">Merch</a></li>
-				<li><a href="/contact">Contacts</a></li>
-			</ul>
-			<div>
-				<ul>
-					<li><a href="/index"><img src="s1.png" alt="s1"></a></li>
-					<li><a href="/index"><img src="s2.png" alt="s2"></a></li>
-					<li><a href="/index"><img src="s3.png" alt="s3"></a></li>
-				</ul>
-				<div>
-					<a href="/upcoming"><img src="chevron.png" alt="chevron"></a>
-					<p>Back to Top</p>
-				</div>
-				<p>
-					Copyrights.
-				</p>
-			</div>
-		</footer>
 	</body>
 </html>
