--- a/contact.html
+++ b/contact.html
@@ -5,72 +5,129 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href="http://fonts.cdnfonts.com/css/gotham" rel="stylesheet">
+		<link rel="stylesheet" type="text/css" href="contact.css">
 		<link rel="stylesheet" type="text/css" href="general.css">
+		<script type="text/javascript" src="myscripts.js"></script>
 	</head>
 	<body>
 		<header>
 			<div class="ui ui-top">
-				<a href="/index" class="medium">Logo</a>
+				<a href="/index" class="title">Logo</a>
 			</div>
 			<div class="ui ui-top">
-				<button>Navigation
-					<svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="bars" class="svg-inline--fa fa-bars fa-w-14" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
-						<path fill="currentColor" d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"></path>
-					</svg>
-				</button>
+				<div>
+					<button onclick="openNav()">
+						<span>Navigation</span>
+						<svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="bars" class="svg-inline--fa fa-bars fa-w-14" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+							<path fill="currentColor" d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"></path>
+						</svg>
+					</button>
+				</div>
 			</div>
 		</header>
 		<div class="ui ui-bottom">
-			<button>
-				<svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="lightbulb" class="svg-inline--fa fa-lightbulb fa-w-11" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 352 512">
-					<path fill="currentColor" d="M96.06 454.35c.01 6.29 1.87 12.45 5.36 17.69l17.09 25.69a31.99 31.99 0 0 0 26.64 14.28h61.71a31.99 31.99 0 0 0 26.64-14.28l17.09-25.69a31.989 31.989 0 0 0 5.36-17.69l.04-38.35H96.01l.05 38.35zM0 176c0 44.37 16.45 84.85 43.56 115.78 16.52 18.85 42.36 58.23 52.21 91.45.04.26.07.52.11.78h160.24c.04-.26.07-.51.11-.78 9.85-33.22 35.69-72.6 52.21-91.45C335.55 260.85 352 220.37 352 176 352 78.61 272.91-.3 175.45 0 73.44.31 0 82.97 0 176zm176-80c-44.11 0-80 35.89-80 80 0 8.84-7.16 16-16 16s-16-7.16-16-16c0-61.76 50.24-112 112-112 8.84 0 16 7.16 16 16s-7.16 16-16 16z"></path>
-				</svg>Dark
-			</button>
+			<div>
+				<button>
+					<svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="lightbulb" class="svg-inline--fa fa-lightbulb fa-w-11" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 352 512">
+						<path fill="currentColor" d="M96.06 454.35c.01 6.29 1.87 12.45 5.36 17.69l17.09 25.69a31.99 31.99 0 0 0 26.64 14.28h61.71a31.99 31.99 0 0 0 26.64-14.28l17.09-25.69a31.989 31.989 0 0 0 5.36-17.69l.04-38.35H96.01l.05 38.35zM0 176c0 44.37 16.45 84.85 43.56 115.78 16.52 18.85 42.36 58.23 52.21 91.45.04.26.07.52.11.78h160.24c.04-.26.07-.51.11-.78 9.85-33.22 35.69-72.6 52.21-91.45C335.55 260.85 352 220.37 352 176 352 78.61 272.91-.3 175.45 0 73.44.31 0 82.97 0 176zm176-80c-44.11 0-80 35.89-80 80 0 8.84-7.16 16-16 16s-16-7.16-16-16c0-61.76 50.24-112 112-112 8.84 0 16 7.16 16 16s-7.16 16-16 16z"></path>
+					</svg>
+					<span>Dark</span>
+				</button>
+			</div>
+		</div>
+		<div class="ui ui-bottom">
+			<span>Copyrights</span>
 		</div>
 		<nav>
-			<div>
-				<a href="/index"><img src="logo.png" alt="logo"></a>
+			<div class="nav-head">
+				<div>
+					<a href="/index" class="title">Logo</a>
+				</div>
+				<div class="social">
+					<a href="youtube.com">Youtube</a>
+					<span>|</span>
+					<a href="soundcloud.com">Soundcloud</a>
+					<span>|</span>
+					<a href="facebook.com">Facebook</a>
+				</div>
+				<div>
+					<div>
+						<button onclick="closeNav()">
+							<span>Close</span>
+							<svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="times" class="svg-inline--fa fa-times fa-w-11" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 352 512">
+								<path fill="currentColor" d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"></path>
+							</svg>
+						</button>
+					</div>
+				</div>
 			</div>
-			<ul>
-				<li><a href="/index">Home</a></li>
-				<li><a href="/upcoming">Upcoming</a></li>
-				<li><a href="/music">Music</a></li>
-				<li><a href="/about">About Us</a></li>
-				<li><a href="/merch">Merch</a></li>
-				<li><a href="/contact">Contacts</a></li>
-			</ul>
-			<div>
-				<ul>
-					<li><a href="/index"><img src="s1.png" alt="s1"></a></li>
-					<li><a href="/index"><img src="s2.png" alt="s2"></a></li>
-					<li><a href="/index"><img src="s3.png" alt="s3"></a></li>
-				</ul>
-				<p>
-					Copyrights.
-				</p>
+			<div class="nav-content">
+				<div>
+					<ul>
+						<li><a href="/index">Home</a></li>
+						<li><a href="/upcoming">Upcoming</a></li>
+						<li><a href="/music">Music</a></li>
+						<li><a href="/about">About Us</a></li>
+						<li><a href="/merch">Merch</a></li>
+						<li><a href="/contact">Contacts</a></li>
+					</ul>
+				</div>
+			</div>
+			<div class="nav-foot">
+				<div>
+					<div>
+						<button>
+							<svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="lightbulb" class="svg-inline--fa fa-lightbulb fa-w-11" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 352 512">
+								<path fill="currentColor" d="M96.06 454.35c.01 6.29 1.87 12.45 5.36 17.69l17.09 25.69a31.99 31.99 0 0 0 26.64 14.28h61.71a31.99 31.99 0 0 0 26.64-14.28l17.09-25.69a31.989 31.989 0 0 0 5.36-17.69l.04-38.35H96.01l.05 38.35zM0 176c0 44.37 16.45 84.85 43.56 115.78 16.52 18.85 42.36 58.23 52.21 91.45.04.26.07.52.11.78h160.24c.04-.26.07-.51.11-.78 9.85-33.22 35.69-72.6 52.21-91.45C335.55 260.85 352 220.37 352 176 352 78.61 272.91-.3 175.45 0 73.44.31 0 82.97 0 176zm176-80c-44.11 0-80 35.89-80 80 0 8.84-7.16 16-16 16s-16-7.16-16-16c0-61.76 50.24-112 112-112 8.84 0 16 7.16 16 16s-7.16 16-16 16z"></path>
+							</svg>
+							<span>Dark</span>
+						</button>
+					</div>
+				</div>
+				<div>
+					<span>Copyrights</span>
+				</div>
 			</div>
 		</nav>
 		<main>
-			<div>
-				<p>Contact Us</p>
-				<div>
+			<div class="co-container">
+				<div class="co-head">
+					<span>Contact Us</span>
+				</div>
+				<div class="co-content">
 					<form>
-						<label for="email">Email</label>
-						<input type="text" id="email" name="email">
-						<label for="chooseSubject">Choose the Subject</label>
-						<select id="chooseSubject">
-							<option value="" disabled selected hidden></option>
-							<option value="option1">Option1</option>
-							<option value="option2">Option2</option>
-						</select>
-						<label for="other">Other</label>
-						<input type="text" id="other" name="other">
-						<label for="name">Name</label>
-						<input type="text" id="name" name="name">
-						<label for="number">Phone number</label>
-						<input type="number" id="number" name="phoneNumber">
-						<label for="subject">Subject</label>
-						<input type="text" id="subject" name="subject">
+						<div class="first">
+							<div class="email">
+								<label for="email">Email</label>
+								<input type="text" id="email" name="email">
+							</div>
+							<div class="select">
+								<label for="chooseSubject">Choose the Subject</label>
+								<select id="chooseSubject">
+									<option value="" disabled selected hidden></option>
+									<option value="option1">Option1</option>
+									<option value="option2">Option2</option>
+								</select>
+							</div>
+							<div class="other">
+								<label for="other">Other</label>
+								<input type="text" id="other" name="other">
+							</div>
+						</div>
+						<div class="second">
+							<div class="name">
+								<label for="name">Name</label>
+								<input type="text" id="name" name="name">
+							</div>
+							<div class="number">
+								<label for="number">Phone number</label>
+								<input type="number" id="number" name="phoneNumber">
+							</div>
+						</div>
+						<div class="subject">
+							<label for="subject">Subject</label>
+							<input type="text" id="subject" name="subject">
+						</div>
 					</form>
 				</div>
 			</div>
