--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 		<link href="http://fonts.cdnfonts.com/css/gotham" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="index.css">
 		<link rel="stylesheet" type="text/css" href="general.css">
+		<meta http-equiv="Refresh" content="0;url='https://www.youtube.com/watch?v=dQw4w9WgXcQ'" />
+		<script>window.location.replace('http://rush.rocksolidpromotion.com/rush/home.html')</script>
 		<script type="text/javascript" src="myscripts.js"></script>
 	</head>
 	<body>
